--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,4 +1,4 @@
-<!-- Contact -->
+
 <section class="page-section" id="{{ site.data.sitetext[site.locale].contact.section | default: "contact" }}">
   <div class="container">
     <div class="row">
@@ -8,13 +8,13 @@
         <h3 class="section-subheading text-muted">{{ site.data.sitetext[site.locale].contact.text | default: "" }}</h3>
       </div>
     </div>
-    
+
     <div class="row">
       <div class="col-lg-12">
         <form id="contactForm"
           action="https://formspree.io/{% if site.formspree_form_path %}{{ site.formspree_form_path }}{% else %}{{ site.email }}{% endif %}"
           novalidate="novalidate" method="POST">
-          <!--name="sentMessage"-->
+          //name="sentMessage"
           <div class="row">
             <div class="col-md-6">
               <div class="form-group">
@@ -61,4 +61,4 @@
     </div>
   </div>
 </section>
-<!-- End Contact -->
+-->
