--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -12,8 +12,9 @@
     <div class="row">
       <div class="col-lg-12">
         <form id="contactForm"
-          action="https://formspree.io/{% if site.formspree_form_path %}{{ site.formspree_form_path }}{% else %}{{ site.email }}{% endif %}"
-          novalidate="novalidate" method="POST">
+          action="https://script.google.com/macros/s/AKfycbzJvdBi0iEXpCZi7HTwkD_hkHu9mdtJF2GHaSdIPhyznEiujbSdP2uGzLZ79CMUnbP0/exec"
+          novalidate="novalidate" 
+          method="POST">
           //name="sentMessage"
           <div class="row">
             <div class="col-md-6">
