--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -31,10 +31,11 @@
                 class="btn btn-primary"
                 data-dismiss="modal"
                 type="button"
+                onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLScGuV3z4r_4gcrmfuMzRa_lkqQrZapxWrgk7nN1lwHyQoph4g/viewform','_blank')"
               >
                 <i class="fas fa-times"></i>
                 {{ site.data.sitetext[site.locale].portfolio.closebutton |
-                default: "Close" }}
+                default: "Đăng ký ngay" }}
               </button>
             </div>
           </div>
