--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -56,5 +56,13 @@
         </div>
       </div>
     </div>
+    <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=6.0" />
+      <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+      <title>CSS background image</title>
+      <!-- <link href="../_sass/base/_page.scss" rel="stylesheet" /> -->
+    </head>
+    <body class="mySVG" ></body>  
   </section>
 <!-- End About -->
