--- a/_sass/base/_page.scss
+++ b/_sass/base/_page.scss
@@ -44,6 +44,15 @@ h6 {
     text-transform: none;
     @include serif-font;
   }
+  h3.contact{
+    font-size: 16px;
+    font-weight:  400;
+    font-style:  italic;
+    margin-bottom:  75px;
+    text-transform: none;
+    color: white;
+    @include serif-font
+  }
 }
 @media (min-width: 768px) {
   section {
