--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -4,16 +4,17 @@
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">
             {{ site.data.sitetext[site.locale].contact.title | markdownify | default: Contact Us }}</h2>
-          <h3 class="section-subheading text-muted">{{ site.data.sitetext[site.locale].contact.text | default: "" }}</h3>
+          <h3 class="contact">{{ site.data.sitetext[site.locale].contact.text | default: "" }}</h3>
+          <h3 class="contact">áidhjisjado</h3>
         </div>
       </div>
-      <form 
+      <!-- <form 
         method="POST" 
         action="https://script.google.com/macros/s/AKfycbzJvdBi0iEXpCZi7HTwkD_hkHu9mdtJF2GHaSdIPhyznEiujbSdP2uGzLZ79CMUnbP0/exec"
         >
         <input name="Email" type="email" placeholder="Email" required>
         <input name="Name" type="text" placeholder="Name" required>
         <button type="submit">Send</button>
-    </form>
+    </form> -->
     </div>
 </section>
