--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,4 @@
-<head>
+<head >
   {% if site.analytics.google %}
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.analytics.google }}"></script>
@@ -13,7 +13,7 @@
   </script>
   <!-- End Google Analytics -->
   {% endif %}
-
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="{{ site.description }}">
