--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -2,11 +2,13 @@
 header.masthead {
   text-align: center;
   color: white;
-  background-image: url("#{$header-image}");
+  // background-image: url("#{$header-image}");
+  background-image: url(dot.svg);
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
   background-size: cover;
+  
   .intro-text {
     padding-top: 150px;
     padding-bottom: 100px;
@@ -48,3 +50,6 @@ header.masthead {
     }
   }
 }
+
+  
+
