--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,12 +1,28 @@
 <section class="page-section" id="{{ site.data.sitetext[site.locale].contact.section | default: "contact" }}">
     <div class="container">
       <div class="row">
-        <div class="col-lg-12 text-center">
+        <div class="col-sm">
           <h2 class="section-heading text-uppercase">
             {{ site.data.sitetext[site.locale].contact.title | markdownify | default: Contact Us }}</h2>
-          <h3 class="contact">{{ site.data.sitetext[site.locale].contact.text | default: "" }}</h3>
-          <h3 class="contact">áidhjisjado</h3>
         </div>
+        <div class="col-sm">
+          <h2 class="section-heading text-uppercase"> SEM Team</h2>
+          <h3 class="contact">
+            Email: semscholars.team@gmail.com 
+            </br> Facebook page: <a href="https://www.facebook.com/LinhMonKGSP"> Linh Mon </a> 
+            </br> Instagram: <a href="https://www.instagram.com/_linh_mon/ ">_linh_mon </a>
+            </br> Youtube: <a href= "https://www.youtube.com/linhmon">Linh Mon</a>
+          </h3>
+        </div>
+        <div class="col-sm">
+          <h2 class="section-heading text-uppercase"> Founder</h2>
+          <h3 class="contact">
+            Email: nguyenlinhmon@gmail.com 
+            </br> Facebook page: <a href="https://www.facebook.com/LinhMonKGSP"> Linh Mon </a> 
+            </br> Instagram: <a href="https://www.instagram.com/_linh_mon/ ">_linh_mon </a>
+            </br> Youtube: <a href= "https://www.youtube.com/linhmon">Linh Mon</a>
+          </h3>
+        </div> 
       </div>
       <!-- <form 
         method="POST" 
