update price and contact

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -8,18 +8,24 @@
         <div class="col-sm">
           <h2 class="section-heading text-uppercase"> SEM Team</h2>
           <h3 class="contact">
-            Email: semscholars.team@gmail.com 
-            </br> Facebook page: <a href="https://www.facebook.com/LinhMonKGSP"> Linh Mon </a> 
-            </br> Instagram: <a href="https://www.instagram.com/_linh_mon/ ">_linh_mon </a>
-            </br> Youtube: <a href= "https://www.youtube.com/linhmon">Linh Mon</a>
+            Email: <a href="https://mail.google.com/mail/u/1/?view=cm&fs=1&to=semscholars.team@gmail.com&tf=1">semscholars.team@gmail.com</a> 
+            </br>
+            </br> Facebook page: <a href="https://www.facebook.com/SEMScholarsTeam"> SEM Scholars- Scholarship Exploring with Mentors </a> 
+            </br>
+            </br> Our community: <a href="www.facebook.com/groups/semscholars/"> SEM Scholars- Scholarship Exploring with Mentors</a>
+          </br>
+            </br> Instagram: <a href="https://www.instagram.com/sem_scholars/"> sem_scholars</a>
+          </br>
+            </br> Youtube: <a href= "https://www.youtube.com/linhmon"> Linh Mon</a>
           </h3>
         </div>
         <div class="col-sm">
           <h2 class="section-heading text-uppercase"> Founder</h2>
           <h3 class="contact">
-            Email: nguyenlinhmon@gmail.com 
-            </br> Facebook page: <a href="https://www.facebook.com/LinhMonKGSP"> Linh Mon </a> 
-            </br> Instagram: <a href="https://www.instagram.com/_linh_mon/ ">_linh_mon </a>
+            Email: <a href="https://mail.google.com/mail/u/1/?view=cm&fs=1&to=nguyenlinhmon@gmail.com&tf=1">nguyenlinhmon@gmail.com </a>
+          </br>
+            </br> Facebook page: <a href="https://www.facebook.com/LinhMonKGSP"> Linh Mon </a> </br>
+            </br> Instagram: <a href="https://www.instagram.com/_linh_mon/ ">_linh_mon </a> </br>
             </br> Youtube: <a href= "https://www.youtube.com/linhmon">Linh Mon</a>
           </h3>
         </div> 
