--- a/_sass/components/_navbar.scss
+++ b/_sass/components/_navbar.scss
@@ -1,6 +1,7 @@
 // Styling for the navbar
 #mainNav {
   background-color: $gray-900;
+  display: block;
   .navbar-toggler {
     font-size: 12px;
     right: 0;
