--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -8,25 +8,28 @@
         <div class="col-sm">
           <h2 class="section-heading text-uppercase"> SEM Team</h2>
           <h3 class="contact">
-            Email: <a href="https://mail.google.com/mail/u/1/?view=cm&fs=1&to=semscholars.team@gmail.com&tf=1">semscholars.team@gmail.com</a> 
+            Email: <a href="https://mail.google.com/mail/u/1/?view=cm&fs=1&to=semscholars.team@gmail.com&tf=1" target="_blank">semscholars.team@gmail.com</a> 
             </br>
-            </br> Facebook page: <a href="https://www.facebook.com/SEMScholarsTeam"> SEM Scholars- Scholarship Exploring with Mentors </a> 
+            </br> Facebook page: <a href="https://www.facebook.com/SEMScholarsTeam" target="_blank"> SEM Scholars- Scholarship Exploring with Mentors </a> 
             </br>
-            </br> Our community: <a href="www.facebook.com/groups/semscholars/"> SEM Scholars- Scholarship Exploring with Mentors</a>
+            </br> Our community: <a href="www.facebook.com/groups/semscholars/" target="_blank"> SEM Scholars- Scholarship Exploring with Mentors</a>
           </br>
-            </br> Instagram: <a href="https://www.instagram.com/sem_scholars/"> sem_scholars</a>
+            </br> Instagram: <a href="https://www.instagram.com/sem_scholars/" target="_blank"> sem_scholars</a>
           </br>
-            </br> Youtube: <a href= "https://www.youtube.com/linhmon"> Linh Mon</a>
+            </br> Youtube: <a href= "https://www.youtube.com/linhmon" target="_blank"> Linh Mon</a>
+          </br>
+        </br> Tiktok: <a href= "https://www.tiktok.com/@sem_scholars" target="_blank"> @sem_scholars</a>
           </h3>
         </div>
         <div class="col-sm">
           <h2 class="section-heading text-uppercase"> Founder</h2>
           <h3 class="contact">
-            Email: <a href="https://mail.google.com/mail/u/1/?view=cm&fs=1&to=nguyenlinhmon@gmail.com&tf=1">nguyenlinhmon@gmail.com </a>
+            Email: <a href="https://mail.google.com/mail/u/1/?view=cm&fs=1&to=nguyenlinhmon@gmail.com&tf=1" target="_blank">nguyenlinhmon@gmail.com </a>
           </br>
-            </br> Facebook page: <a href="https://www.facebook.com/LinhMonKGSP"> Linh Mon </a> </br>
-            </br> Instagram: <a href="https://www.instagram.com/_linh_mon/ ">_linh_mon </a> </br>
-            </br> Youtube: <a href= "https://www.youtube.com/linhmon">Linh Mon</a>
+            </br> Facebook page: <a href="https://www.facebook.com/LinhMonKGSP" target="_blank"> Linh Mon </a> </br>
+            </br> Instagram: <a href="https://www.instagram.com/_linh_mon/ " target="_blank">_linh_mon </a> </br>
+            </br> Youtube: <a href= "https://www.youtube.com/linhmon" target="_blank">Linh Mon</a></br>
+            </br> Tiktok: <a href= "https://www.tiktok.com/@_linh_mon" target="_blank">@_linh_mon</a>
           </h3>
         </div> 
       </div>
