--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -1,5 +1,6 @@
 // Variables
-
+$primary: #9b121f;
+$selection-color: #ffd291;
 // Restated Bootstrap Variables
 $gray-100: #f8f9fa !default;
 $gray-200: #e9ecef !default;
