--- a/_sass/components/_buttons.scss
+++ b/_sass/components/_buttons.scss
@@ -12,12 +12,14 @@
 .btn-primary {
   background-color: $primary;
   border-color: $primary;
+  border-radius: 25px;
   &:active,
   &:focus,
   &:hover {
     background-color: darken($primary, 7.5%) !important;
     border-color: darken($primary, 7.5%) !important;
-    color: rgb(186, 3, 56);
+    // color: rgb(186, 3, 56);
+    color: #ffd291;
   }
   &:active,
   &:focus {
